# workzenRust

./: Cargo.toml
attendance_service/: Cargo.toml
attendance_service/src/: lib.rs  main.rs
auth_service/: Cargo.toml
auth_service/src/: lib.rs
employee_management_service/: Cargo.toml
employee_management_service/src/: lib.rs
reporting_service/: Cargo.toml
src/: auth_service_runner.rs  employee_management_service_runner.rs  main.rs
